playsink: If the visualisation is changing and reconfiguration is pending, do it all during reconfiguration

Otherwise we will have two pad blocks that want to use the same mutex
and block each other via the streamlock.

https://bugzilla.gnome.org/show_bug.cgi?id=709210